--- a/res/layout/connected.xml
+++ b/res/layout/connected.xml
@@ -1,71 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:id="@android:id/tabhost">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical" >
 	<LinearLayout
-  	android:orientation="vertical"
-  	android:layout_width="fill_parent"
-  	android:layout_height="fill_parent">
-		<TabWidget android:id="@android:id/tabs"
+		android:id="@+id/controls"
 		android:layout_width="fill_parent"
-	  	android:layout_height="wrap_content"/>
-			<FrameLayout android:id="@android:id/tabcontent"
-	  		android:layout_width="fill_parent"
-	  		android:layout_height="fill_parent"
-			>
-				<LinearLayout
-				android:id="@+id/controls"
-   				android:layout_width="fill_parent"
-  				android:layout_height="fill_parent">
-  					<TableLayout
-  					android:layout_width="fill_parent"
-  					android:layout_height="wrap_content"
-  					>
-  					    <TableRow>
-	    					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Status:"/>
-	    					<TextView android:id="@+id/playStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="UNKNOWN" />
-    					</TableRow>
-	  					<TableRow 
-	  					android:layout_width="fill_parent"
-	  					android:layout_height="wrap_content">
-  							<Button android:text="Play" android:id="@+id/playButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-		    				<Button android:text="Pause" android:id="@+id/pauseButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-		    				<Button android:layout_width="wrap_content" android:text="Stop" android:layout_height="wrap_content" android:id="@+id/stopButton"></Button>
-    					</TableRow>
-	    				<TableRow 
-	  					android:layout_width="fill_parent"
-	  					android:layout_height="wrap_content">
-		    				<Button android:layout_width="wrap_content" android:text="IncVol" android:layout_height="wrap_content" android:id="@+id/incVol"></Button>
-		    				<Button android:layout_width="wrap_content" android:text="DecVol" android:layout_height="wrap_content" android:id="@+id/decVol"></Button>
-		    				<Button android:layout_width="wrap_content" android:text="Mute" android:layout_height="wrap_content" android:id="@+id/mute"></Button>
-    					</TableRow>
-    					<TableRow 
-	  					android:layout_width="fill_parent"
-	  					android:layout_height="wrap_content">		
-		    				<Button android:layout_width="wrap_content" android:text="&lt;&lt;" android:layout_height="wrap_content" android:id="@+id/prev"></Button>
-		    				<Button android:layout_width="wrap_content" android:text="&gt;&gt;" android:layout_height="wrap_content" android:id="@+id/next"></Button>
-    					</TableRow>
-    					<TableRow>
-	    					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Volume:"/>
-	    					<TextView android:id="@+id/volume" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="UNKNOWN" />
-    					</TableRow>
-    					<TableRow>
-	    					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Artist:"/>
-	    					<TextView android:id="@+id/artist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="UNKNOWN" />
-    					</TableRow>
-    					<TableRow>
-	    					<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Title:"/>
-	    					<TextView android:id="@+id/track" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="UNKNOWN" />
-    					</TableRow>
-    				</TableLayout>
-				</LinearLayout>
-				<ListView
-				android:id="@+id/playlist"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				>
-				</ListView>
-			</FrameLayout>
+		android:layout_height="wrap_content" >
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical" >
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_horizontal" >
+				<Button
+					android:id="@+id/prev"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:background="@drawable/previous"
+					android:padding="2dp" />
+				<Button
+					android:id="@+id/playPauseButton"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:background="@drawable/play"
+					android:padding="2dp" />
+				<Button
+					android:id="@+id/stopButton"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:background="@drawable/stop"
+					android:padding="2dp" />
+				<Button
+					android:id="@+id/next"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:background="@drawable/next"
+					android:padding="2dp" />
+			</LinearLayout>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" >
+				<Button
+					android:id="@+id/decVol"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="DecVol" />
+				<Button
+					android:id="@+id/incVol"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="IncVol" />
+				<Button
+					android:id="@+id/mute"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Mute" />
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Volume:" />
+				<TextView
+					android:id="@+id/volume"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="UNKNOWN" />
+			</LinearLayout>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" >
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Status:" />
+				<TextView
+					android:id="@+id/playStatus"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="UNKNOWN" />
+			</LinearLayout>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" >
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Artist:" />
+				<TextView
+					android:id="@+id/artist"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="UNKNOWN" />
+			</LinearLayout>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content" >
+				<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Title:" />
+				<TextView
+					android:id="@+id/track"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="UNKNOWN" />
+			</LinearLayout>
+		</LinearLayout>
 	</LinearLayout>
-</TabHost>
+	<ListView
+		android:id="@+id/playlist"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" >
+	</ListView>
+</LinearLayout>
