Replace inc/dec volume with SeekBar. Get rid of mute button.

--- a/res/layout/connected.xml
+++ b/res/layout/connected.xml
@@ -41,45 +41,31 @@
 					android:padding="2dp" />
 			</LinearLayout>
 			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" >
-				<Button
-					android:id="@+id/decVol"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="DecVol" />
-				<Button
-					android:id="@+id/incVol"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="IncVol" />
-				<Button
-					android:id="@+id/mute"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Mute" />
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_vertical" >
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Volume:" />
+				<SeekBar
+					android:id="@+id/volumeBar"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_margin="8sp"
+					android:layout_weight="1"
+					android:max="100"
+					android:paddingLeft="10sp"
+					android:paddingRight="10sp" />
 				<TextView
 					android:id="@+id/volume"
-					android:layout_width="wrap_content"
+					android:layout_width="30sp"
 					android:layout_height="wrap_content"
-					android:text="UNKNOWN" />
-			</LinearLayout>
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" >
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Status:" />
-				<TextView
-					android:id="@+id/playStatus"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="UNKNOWN" />
+					android:layout_gravity="center_horizontal|center_vertical"
+					android:layout_marginRight="3sp"
+					android:text="90"
+					android:textSize="20sp"
+					android:textStyle="bold" />
 			</LinearLayout>
 			<LinearLayout
 				android:layout_width="match_parent"
