--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-    <TextView android:text="XMMS2 Remote" android:id="@+id/title" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
-    <EditText android:text="192.168.1.14" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/srvIp"></EditText>
-    <EditText android:text="8000" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/srvPort"></EditText>
-    <Button android:id="@+id/conButton" android:layout_height="wrap_content" android:text="Connect" android:layout_width="fill_parent"></Button>
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical" >
+	<TextView
+		android:id="@+id/title"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="XMMS2 Remote" >
+	</TextView>
+	<EditText
+		android:id="@+id/srvIp"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:inputType="textUri"
+		android:selectAllOnFocus="true"
+		android:text="192.168.1.14" >
+	</EditText>
+	<EditText
+		android:id="@+id/srvPort"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:inputType="numberDecimal"
+		android:text="8000" >
+	</EditText>
+	<Button
+		android:id="@+id/conButton"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="Connect" >
+	</Button>
 </LinearLayout>
-
